# sanad

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  fly.toml  main.py  pyproject.toml
backend/: .env.example
backend/accounts/: admin.py  admin_api.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_userprofile_nationality.py  0003_backfill_google_usernames.py
backend/backend/: __init__.py  asgi.py  celery.py  urls.py
backend/backend/settings/: __init__.py  base.py  development.py  production.py
backend/base/: admin.py  admin_api.py  exceptions.py  middleware.py  models.py  pagination.py  responses.py  search.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
backend/base/migrations/: 0001_initial.py  0002_initial.py  0003_search_trigram.py  0004_subcategory.py
backend/content/: admin.py  models.py  serializers.py  services.py  urls.py  views.py  youtube.py
backend/content/migrations/: 0001_initial.py  0002_content_subcategory.py  0003_content_document.py  0004_backfill_search_text.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  wrangler.jsonc
frontend/scripts/: postbuild-node-static.mjs
frontend/src/: app.css  app.html  hooks.server.js  service-worker.js
frontend/src/lib/: index.js
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css
frontend/static/: manifest.webmanifest
scripts/: fly-secrets.sh
(+59 files in other folders)
