[project]
name = "sanad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "pillow>=11.2.1",
    "drf-spectacular>=0.28.0",
    "google-auth>=2.40.0",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "python-decouple>=3.8",
    "django-ses>=4.0",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "django-redis>=5.4",
    "celery[redis]>=5.4",
    "sentry-sdk[django]>=2.25",
    "django-storages[s3]>=1.14",
    "boto3>=1.38",
    "dj-database-url>=2.3",
    "gunicorn>=23.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-django>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = ["backend"]
testpaths = ["backend"]
addopts = "-q"
